// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`label templates > renders React template 1`] = `
"import * as React from "react";
import { cn } from "@/lib/utils";
export type LabelProps = React.ComponentPropsWithoutRef<"label"> & {
  disabled?: boolean;
};
export const Label = React.forwardRef<HTMLLabelElement, LabelProps>(
  ({ className, disabled, ...props }, ref) => {
    return (
      <label
        ref={ref}
        data-disabled={disabled || undefined}
        className={cn(
          "[font-size:var(--label-font-size)] font-(--label-font-weight) text-(--label-color) data-[disabled]:text-(--label-disabled-color) data-[disabled]:cursor-not-allowed",
          className,
        )}
        {...props}
      />
    );
  },
);

Label.displayName = "Label";
"
`;

exports[`label templates > renders React template without TypeScript 1`] = `
"import * as React from "react";
import { cn } from "@/lib/utils";
export const Label = React.forwardRef(
  ({ className, disabled, ...props }, ref) => {
    return (
      <label
        ref={ref}
        data-disabled={disabled || undefined}
        className={cn(
          "[font-size:var(--label-font-size)] font-(--label-font-weight) text-(--label-color) data-[disabled]:text-(--label-disabled-color) data-[disabled]:cursor-not-allowed",
          className,
        )}
        {...props}
      />
    );
  },
);

Label.displayName = "Label";
"
`;

exports[`label templates > renders Vue template 1`] = `
"<script setup lang="ts">
import { computed } from "vue";
import { cn } from "@/lib/utils";

const props = withDefaults(
  defineProps<{
    disabled?: boolean;
    class?: string;
  }>(),
  {
    disabled: false,
  },
);

const classes = computed(() =>
  cn(
    "[font-size:var(--label-font-size)] font-(--label-font-weight) text-(--label-color) data-[disabled]:text-(--label-disabled-color) data-[disabled]:cursor-not-allowed",
    props.class,
  ),
);
</script>

<template>
  <label :data-disabled="disabled || undefined" :class="classes" v-bind="$attrs"><slot /></label>
</template>
"
`;
